# kubesealer

./: README.md  pyproject.toml  shell.nix
src/kubesealer/: cli.py  cluster.py  kubeseal.py
