[tool.poetry]
name = "kubesealer"
version = "1.0.0"
description = "An interactive wrapper for kubeseal binary edit the SealedSecret with your editor like a Kubernetes Secret."
authors = ["Vadim Gedz <vadims@linux-tech.io>", "Sebastiaan Van Hoecke <sebastiaan@sevaho.io>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/sevaho/kubesealer"
homepage = "https://github.com/ssevaho/kubesealer"

[tool.poetry.urls]
Pypi = "https://pypi.org/project/kubesealer/"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
requests = "^2.28.1"
kubernetes = "^29.0.0"
click = "^8.1.7"
icecream = "^2.1.3"
questionary = "^2.0.1"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kubesealer = "kubesealer.cli:cli"
